# BusEdge

./: .flake8  .gitignore  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  README.md
.reuse/: dep5
client/: README.md  protoc_compile.py  run_client.py
client/nodes/autodet_node/: Dockerfile  delphi_filter.py  detector_fbnet.py  filter_node.py  filter_node_livemap.py  ros_entrypoint.sh  sys_eval_node.py
client/nodes/common/: consumers.py  docker_subsriber.py  feature_extractor.py  feature_extractor_node.py  image_noop_node.py  preprocessor.py  preprocessor_node.py  trajectory_node.py
client/nodes/detector_docker/: Dockerfile  sign_filter.py  sign_filter_node.py
client/nodes/example_node_docker/: Dockerfile  filter_node.py
client/ros_workspace/src/gps_driver/: CMakeLists.txt  README.rst  package.xml  setup.py
client/ros_workspace/src/gps_driver/doc/: conf.py
client/ros_workspace/src/gps_driver/msg/: Acc.msg  Vel.msg
client/ros_workspace/src/gps_driver/scripts/: nmea_records_publisher  nmea_serial_driver  nmea_socket_driver  nmea_topic_driver  nmea_topic_publisher  nmea_topic_serial_reader
client/ros_workspace/src/gps_driver/src/libnmea_navsat_driver/: checksum_utils.py  driver.py  parser.py
client/ros_workspace/src/gps_driver/src/libnmea_navsat_driver/nodes/: nmea_serial_driver.py  nmea_socket_driver.py  nmea_topic_driver.py  nmea_topic_publisher.py  nmea_topic_serial_reader.py  records_publisher.py
client/ros_workspace/src/util_nodes/: .gitignore  CMakeLists.txt  README.rst  package.xml  setup.py
client/ros_workspace/src/util_nodes/launch/: gps.launch  image_proc.launch  image_saver.launch  image_transport_raw.launch  sensors.launch  start_record.launch  start_record_rect.launch  start_record_test.launch  visualize_resize.launch  visualize_resize_rect.launch
client/ros_workspace/src/util_nodes/msg/: ErrMsg.msg  FeatureMsg.msg  PreprocessedMsg.msg
client/ros_workspace/src/util_nodes/scripts/: email_sender  image_saver  monitor_node
client/ros_workspace/src/util_nodes/src/busedge_utils/: email_sender.py  get_disk_status.py  image_saver.py  monitor_node.py
client/scripts/run_on_bus/: README.md  adjust_sensors.sh  gabriel_client.sh  launch_service.sh  monitor_ignition.sh  run_roscore.sh  sensor_driver.sh  start_record.sh  stop_record.sh  wait_for_harddrive.sh  wait_for_network.sh
client/scripts/use_rosbag/: Dockerfile  README.md  annotator.py  exif.py  filter_bag.py  pseudo_labeling_runner.py  read_bag.py  subscribe_bag.py
demo/: README.md
server/: README.md  run_server.py
server/engines/autodet_engine/: Dockerfile  README.md  anno_manager.py  autodet_engine.py  autodet_engine_livemap.py  detector.py  detector_fbnet.py  engine_runner.py  model_manager_bus.py  (+3 more)
server/protocol/: setup.py
(+65 files in other folders)
