<?xml version="1.0"?>
<!--
SPDX-FileCopyrightText: 2021 Carnegie Mellon University

SPDX-License-Identifier: Apache-2.0
-->
<package format="2">
  <name>busedge_utils</name>
  <version>0.0.1</version>
  <description>
    busedge_utils
  </description>

  <maintainer email="canboy@cs.cmu.edu">Canbo Ye</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-serial</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <test_depend>roslint</test_depend>
  <export>
    <!-- This is a pure Python package, so mark it architecture independent -->
    <architecture_independent/>
  </export>
</package>
